# nearest-neighbors

./: .clangd  CMakeLists.txt
nearest-neighbors/: CMakeLists.txt  nearest_neighbors.cppm  point.cppm
tests/: CMakeLists.txt  point_tests.cpp
